--- a/c.project
+++ b/c.project
@@ -1,7 +1,7 @@
 #include<stdio.h>
 int main()
 {
-printf("Hello\n");
+printf("Hello this is my first time to use Github.\n");
 system("pause");
 return 0;
 }
